<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="transfer"
            type="com.theideal.data.model.Transfer" />



        <variable
            name="theClientViewModel"
            type="com.theideal.notary.main.client.createclient.TheClientViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_text_field_deposit"
            android:hint="@string/the_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text="@={`` + transfer.amount}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_text_field_deposit"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={transfer.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/radio_group_transfer"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btn_withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radio_btn_transfer_dialog"
                android:text="@string/withdraw" />

            <RadioButton
                android:id="@+id/radio_btn_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radio_btn_transfer_dialog"
                android:text="@string/deposit" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/transfer" />

    </LinearLayout>
</layout>