<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="billContact"
            type="com.theideal.data.model.BillContact" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other_fee">

            <com.google.android.material.textfield.TextInputEditText
                set_double_text_to_empty="@{`` + billContact.theBillOtherFees}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text="@={`` + billContact.theBillOtherFees}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_other_fees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btn_add_other_fees"
            android:backgroundTint="@color/dark_ocean_blue"
            android:text="@string/add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_dialog_other_fee_message_margin"
            android:gravity="center"
            android:text="@string/dialog_other_fee_message" />
    </LinearLayout>
</layout>